chapel-lang.org/docs/1.25/_sources/primers/specialMethods.rst.txt
.. default-domain:: chpl

.. _primers-specialMethods:

Special Methods
===============

`View specialMethods.chpl on GitHub <https://github.com/chapel-lang/chapel/blob/master/test/release/examples/primers/specialMethods.chpl>`_



This primer covers special methods for classes and records

Classes and records can have a handful of methods that are specially named
and treated differently than other methods.  These methods enable
operations such as initializing or deinitializing a class or record
instance, accessing a class or record as though it were an array,
iterating over an class or record, and defining the way a class or record
is read from or written to a channel.

Note that there are two ways to declare a method. Methods declared within
a class or record are called primary methods:


.. code-block:: chapel

    record ExampleRecord1 {
      var exampleField: int;
      proc primaryMethod() { }
    }



Methods declared outside of a class or record are called secondary methods:


.. code-block:: chapel

    record ExampleRecord2 {
      var exampleField: int;
    }
    proc ExampleRecord2.secondaryMethod() { }


Methods declared outside of a class or record and outside of the scope where
the type is defined are called tertiary methods.  Tertiary methods follow the
same declaration syntax as secondary methods.

This primer will use the secondary method form, but all of the special
methods can also be written as primary methods.

First we will declare a simple record with a field that is a tuple of
integers.  We'll add special methods and iterators to this record later.

.. code-block:: chapel

    record R {
      param size: int = 10;
      var vals: size*int;
    }



Initializers and Deinitializers
-------------------------------


An initializer named ``init`` is called when creating an instance of the
class or record, for example with the ``new`` keyword. An initializer
accepting zero arguments is called a *default initializer*.

A method named ``init=`` is called a *copy initializer* and accepts a
single argument.

If a method named ``postinit`` that accepts zero arguments exists for a
class or record type, it will automatically be called after the
initializer call completes.

The ``deinit`` method will deinitialize a record when it leaves scope,
or a class when ``delete`` is called on it. If the class or record
contained any unmanaged classes, open files, etc. this method would be
the place to delete them or otherwise clean them up. See the :doc:`records`
primer for more details on initializers and deinitializers.


The ``this`` Accessor
---------------------


The ``this`` method gives the record the ability to be accessed like an
array.  Here we use the the argument as an index to choose a tuple element.

.. code-block:: chapel

    proc R.this(n: int) ref {
      if !vals.indices.contains(n) then
        halt("index out of bounds accessing R");
      return vals[n];
    }



All functions and methods in Chapel can be called using either parenthesis
or square brackets. Here we'll access the record by implicitly calling
the ``this`` method defined above.


.. code-block:: chapel

    var r = new R();

    r[0] = 1;
    r(2) = 3;

    writeln(r.vals);



Default Iterators
-----------------


An iterator named ``these`` that can accept zero arguments is automatically
called when a record or class instance is used in the iterator position
of a ``for`` loop.

.. code-block:: chapel

    iter R.these() ref {
      for i in vals.indices {
        yield vals[i];
      }
    }

    for val in r {
      val += 1;
    }
    writeln(r.vals);


Classes and records can also define parallel iterators including
leader/follower iterator pairs and standalone parallel iterators. For
more information on parallel iterators, see the :doc:`parIters` primer.


Custom Hashing
--------------



.. code-block:: chapel

    use Map;

    proc R.hash() {
      writeln("In custom hash function");
      return vals[0];
    }


Now that the record R has a ``hash`` method defined, Chapel's map
and associative domain will call this custom ``hash`` instead of
the compiler generated method for ``hash``. Note that this only works
for records and will not apply to defining a ``int.hash`` for example.

.. code-block:: chapel

    var myMap = new map(R, int);
    var myD: domain(R);
    var myR = new R();

    myMap[myR] = 5;
    myD += myR;



IO Methods
----------


The ``writeThis`` method defines how to write an instance of R to a
channel. We'll write the ``vals`` tuple between asterisks. See section
:ref:`readThis-writeThis-readWriteThis` for more information  on the
``writeThis``, ``readThis``, and ``readWriteThis`` methods.


.. code-block:: chapel

    use IO; // required for file operations

    config const filename = "tempfile.txt";

    proc R.writeThis(ch: channel) throws {
      ch.write("*", vals, "*");
    }

    {
      // Open the file in a new block so that deinitializers
      // will close it at the end of the block
      var f = open(filename, iomode.cw);
      var ch = f.writer();
      ch.writeln(r);
    }


The ``readThis`` method defines how to read an instance of R from a
channel. We'll read the ``vals`` tuple between asterisks like how it
was written above.

.. code-block:: chapel

    proc R.readThis(ch: channel) throws {
      var star = new ioLiteral("*");
      ch.read(star);
      ch.read(vals);
      ch.read(star);
    }

    {
      var f = open(filename, iomode.r);
      var ch = f.reader();
      var r2 = new R();
      ch.readln(r2);
      assert(r == r2);
    }


If the record should be read and written using the same
format, the combined ``readWriteThis`` method can replace the
``readThis`` and ``writeThis`` methods. This method will be
used for both reading and writing the ``vals`` tuple
surrounded by double asterisks. The ``readThis`` and
``writeThis`` methods defined above have higher precedence
than ``readWriteThis``, so this function is not used because
they are defined.

.. code-block:: chapel

    proc R.readWriteThis(ch: channel) throws {
      const stars = new ioLiteral("**");
      ch <~> stars <~> vals <~> stars;
    }

    {
      var chW = openwriter(filename);
      chW.writeln(r);
      chW.flush();

      writeln(r);
      var r2 = new R();
      var chR = openreader(filename);
      chR.readln(r2);
      assert(r == r2);

    }


Clean up the temporary file we created earlier.

.. code-block:: chapel

    {
      use FileSystem;
      if exists(filename) then
        remove(filename);
    }



Operator Overloads
------------------


Operators can be overloaded for record types to support
assignment (``=``), comparisons, (``<``, ``<=``, ``>``, ``>=``, ``==``,
``!=``), and other general operators (``+``, ``-``, ``*``, ``/``, ...).
These are declared as regular functions using the ``operator`` keyword.